new look, who dat? changed font and did some minor tweaks to the look of the site

--- a/src/layout/blog-layout.astro
+++ b/src/layout/blog-layout.astro
@@ -20,12 +20,15 @@ let {title, tags, heroImage, pubDate, keywords, description, heroImageAlt} = Ast
 		<meta name="robots" content="index, follow" />
 		<meta name="googlebot" content="index, follow" />
 		<meta name="google" content="notranslate" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 		<SeoHead title={`${title}`} description={description} image={heroImage} keywords={keywords}/>
 	</head>
 
 	<body>
         <Nav/>
-        <main>
+        <main class="main">
 						<Back text="Back to blog" url="/blog"></Back>
             <section>
                 <div class="top">
@@ -39,11 +42,12 @@ let {title, tags, heroImage, pubDate, keywords, description, heroImageAlt} = Ast
 										}
                 </div>
             </section>
-        <slot/>
-							<div class="post_tags">
-								{tags.map((t) => 
-								<a href={`/blog/tags/${t.replace(" ", "-")}`}>{t}</a>
-								)}
+            <slot/>
+            <div class="post_tags">
+              {tags.map((t) => 
+              <a href={`/blog/tags/${t.replace(" ", "-")}`}>{t}</a>
+              )}
+            </div>
         </main>
 				<Footer />
 	</body>
