--- a/src/layout/main-layout.astro
+++ b/src/layout/main-layout.astro
@@ -19,6 +19,9 @@ if (!keywords) keywords = "tonie, victor, developer, software, engineer, nwanoch
 	<head>
 		<meta name="robots" content="index, follow" />
 		<meta name="googlebot" content="index, follow" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 		<SeoHead title={title} description={description} image={image} keywords={keywords}/>
 	</head>
 	<body>
