--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -6,12 +6,7 @@ interface Props {
 const { date } = Astro.props;
 ---
 
-<time datetime={date.toISOString()} style={{
-	"font-size": ".9rem",
-	"font-weight": "300",
-	"width": "100%",
-	"opacity": "0.75"
-}}>
+<time datetime={date.toISOString()}>
 	{
 		date.toLocaleDateString('en-us', {
 			year: 'numeric',
