--- a/src/layout/blog-layout.css
+++ b/src/layout/blog-layout.css
@@ -1,91 +1,120 @@
-main {
-	padding: 2rem var(--padding-x-lg);
-	display: flex;
-	gap: 1.5rem;
-	flex-direction: column;
+.main {
+  padding: 2rem var(--padding-x-lg);
+  display: flex;
+  flex-direction: column;
+  font-family: "Arvo", serif;
+  line-height: 29px;
+  gap: 2rem;
 }
 
 .top {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-}
-
-.top time {
-	opacity: 0.7;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .top h1 {
-	font-size: 1.85rem;
-	font-weight: 900;
+  font-size: 2rem;
+  line-height: 54px;
 }
 
-.top_image {
-	width: 100%;
-	height: 100%;
-	max-height: 28rem;
-	border-radius: 0.5rem;
+.blog {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-.top_image img {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	border-radius: 0.5rem;
+.blog p {
+  font-size: 17px;
+  line-height: 29px;
 }
+
+.blog pre {
+  padding: 1rem;
+  font-size: 1rem;
+  font-family: "Arvo", serif;
+  border-radius: 0.5rem;
+}
+
+.blog code {
+  /* display: none; */
+  all: unset;
+  background-color: #2d2d2d;
+  font-size: 1rem;
+  border-radius: .2rem;
+  padding: 0.2rem
+}
+
+.blog pre code {
+  all: unset;
+}
+
+.blog img {
+  border-radius: 0.5rem;
+  margin-top: 1rem;
+  object-fit: contain;
+  width: 100%;
+}
+
+.blog h2 {
+  font-size: 2rem;
+  padding: 1rem 0;
+}
+
+.blog h3 {
+  padding: 1rem 0;
+  font-size: 1.5rem;
+}
+
+.blog ul,
+.blog ol {
+  list-style-position: outside;
+  margin: 0 0 1rem 1.25rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 0;
+}
+
+.contains-task-list {
+  list-style: none;
+}
+
+.blog blockquote {
+  font-style: italic;
+  display: flex;
+  border-left: 4px solid var(--highlight-color);
+  padding: 0 0.5rem;
+  flex-direction: column;
+  opacity: 0.9;
+}
+
 
 .post_tags {
-	display: flex;
-	align-items: flex-start;
-	gap: 0.5rem;
-	flex-wrap: wrap;
+  display: flex;
+  align-items: flex-start;
+  gap: 0.5rem;
+  flex-wrap: wrap;
 }
 
-.post_tags a{
-	background-color: #1a1a1a;
-	font-weight: 400;
-	filter: brightness(130%);
-	cursor: pointer;
-	padding: 0 0.95rem;
-	font-size: .8rem;
-	opacity: .6;
-	color: white;
-	width: max-content;
-	border-radius: 2rem;
-	box-shadow: 0 1 2px rgba(0, 0, 0, 0.5);
-	display: flex;
-	align-items: center;
-	justify-content: center;
+.post_tags a {
+  background-color: #1a1a1a;
+  font-weight: 400;
+  filter: brightness(130%);
+  padding: 0 0.95rem;
+  font-size: .8rem;
+  opacity: .6;
+  color: white;
+  border-radius: 2rem;
+  box-shadow: 0 1 2px rgba(0, 0, 0, 0.5);
+  display: flex;
+  cursor: pointer;
+  width: max-content;
+  align-items: center;
+  justify-content: center;
 }
 
-.post_tags span:hover {
-	filter: brightness(100%);
+.post_tags a:hover {
+  filter: brightness(100%);
 }
 
-@media screen and (max-width: 1024px) {
-	.top_image {
-		width: 100%;
-		height: 100%;
-		max-height: 25rem;
-	}
-}
-
-@media screen and (max-width: 768px) {
-	.top_image {
-		width: 100%;
-		height: 100%;
-		max-height: 20rem;
-	}
-}
-
-@media screen and (max-width: 480px) {
-	.top_image {
-		width: 100%;
-		height: 100%;
-		max-height: 10rem;
-	}
-
-	main {
-		gap: 1.2rem;
-	}
-}
