--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -6,129 +6,24 @@
 
 .post {
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
 }
 
-.post a {
-  /* font-size: 1.2rem; */
-  font-weight: 500;
-  color: rgb(245, 245, 245);
-  transition: all 100ms ease;
-  display: flex;
-  gap: 0.4rem;
-  align-items: center;
+.post .title {
   text-decoration: underline;
-
-}
-
-.post p {
-  font-size: 17px;
+  padding-bottom: 1rem;
+  /* width: 100%; */
+  /* max-width: max-content; */
 }
 
 .post a:hover {
   color: var(--highlight-color);
 }
 
-.blog h1,
-.blog h2,
-.blog h3,
-.blog h4,
-.blog h5 {
-  line-height: 1.75rem;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
-.blog ul,
-.blog ol {
-  list-style-position: inside;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-/* For some reason this is the style used for ul that contain checkboxes */
-.contains-task-list {
-  list-style: none;
-}
-
-.post p,
-.post time {
-  opacity: 0.8;
-}
-
-.blog p,
-.blog h1,
-.blog h2,
-.blog h3,
-.blog h4,
-.blog h5,
-.blog h6,
-.blog pre,
-.blog ul,
-.blog ol,
-.blog img,
-.blog blockquote {
-  margin-bottom: 1rem;
-}
-
-.blog img {
-  margin-top: 1rem;
-}
-
-.blog h1 {
-  font-size: 1.69rem;
-}
-
-
-.blog h2 {
-  font-size: 1.5rem;
-}
-
-.blog pre {
-  padding: 1.25rem;
-  font-size: 0.9rem;
-  overflow-x: auto;
-  border-radius: 0.5rem;
-  width: 99.5%;
-}
-
-.blog pre code {
-  border-radius: 0.5rem;
-  all: unset;
-}
-
-.blog blockquote {
-  font-style: italic;
-  display: flex;
-  border-left: 4px solid var(--highlight-color);
-  padding: 0 0.5rem;
-  flex-direction: column;
-  opacity: 0.9;
-}
-
-.blog code {
-  all: unset;
-  background-color: #2d2d2d;
-  font-size: 0.984rem;
-  border-radius: .2rem;
-  padding: 0.2rem
-}
-
-.blog img {
-  width: 99.5%;
-  height: 100%;
-  max-height: 30rem;
-  border-radius: .2rem;
-  /*object-fit: contain;*/
-  /*border-radius: 0.5rem;*/
-}
-
-
-@media screen and (max-width: 480px) {
-
-  .blog img,
-  .blog pre {
-    width: 99.5%;
+@media screen and (min-width: 800px) {
+  .post {
+    display: grid;
+    grid-template-columns: minmax(7rem, auto) 1fr;
+    gap: 1rem;
   }
 }
