--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,78 +1,78 @@
 main {
-	padding: 1.5rem var(--padding-x-lg);
-	display: flex;
-	flex-direction: column;
-	gap: 2rem;
+  padding: 1.5rem var(--padding-x-lg);
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
 
 .intro_section {
-	display: flex;
-	flex-direction: column;
-	gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .project_container {
-	display: flex;
-	flex-direction: column;
-	gap: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
 }
 
 .project {
-	display: flex;
-	flex-direction: column;
-	gap: 0.375rem;
-	align-items: baseline;
+  display: flex;
+  flex-direction: column;
+  gap: 0.375rem;
+  align-items: baseline;
 }
 
 .project_title {
-	color: rgb(245, 245, 245);
-	font-weight: 500;
-	display: flex;
-	gap: 0.4rem;
-	align-items: center;
-	text-decoration: underline;
+  color: rgb(245, 245, 245);
+  font-weight: 400;
+  display: flex;
+  gap: 0.4rem;
+  align-items: center;
+  border-bottom: 1px solid;
 }
 
 .project_title:hover {
-	color: #fca311;
-	transition: ease all 300ms;
+  color: #fca311;
+  transition: ease all 300ms;
 }
 
 .project_arrow {
-	font-size: 1rem;
+  font-size: 1rem;
 }
 
 .project p {
-	font-weight: 300;
-	font-size: 0.9rem;
-	width: 100%;
-	opacity: 0.75;
+  font-weight: 300;
+  font-size: 0.9rem;
+  width: 100%;
+  opacity: 0.75;
 }
 
 .project_tags {
-	display: flex;
-	align-items: flex-start;
-	gap: 0.5rem;
-	flex-wrap: wrap;
+  display: flex;
+  align-items: flex-start;
+  gap: 0.5rem;
+  flex-wrap: wrap;
 }
 
 .project_tags span {
-	background-color: #1a1a1a;
-	font-weight: 400;
-	filter: brightness(130%);
-	padding: 0 0.95rem;
-	font-size: .8rem;
-	opacity: .6;
-	color: white;
-	border-radius: 2rem;
-	box-shadow: 0 1 2px rgba(0, 0, 0, 0.5);
-	display: flex;
-	cursor: pointer;
-	width: max-content;
-	align-items: center;
-	justify-content: center;
+  background-color: #1a1a1a;
+  font-weight: 400;
+  filter: brightness(130%);
+  padding: 0 0.95rem;
+  font-size: .8rem;
+  opacity: .6;
+  color: white;
+  border-radius: 2rem;
+  box-shadow: 0 1 2px rgba(0, 0, 0, 0.5);
+  display: flex;
+  cursor: pointer;
+  width: max-content;
+  align-items: center;
+  justify-content: center;
 }
 
 .project_tags span:hover {
-	filter: brightness(100%);
+  filter: brightness(100%);
 }
