--- a/src/layout/blog-layout.css
+++ b/src/layout/blog-layout.css
@@ -89,7 +89,6 @@
   opacity: 0.9;
 }
 
-
 .post_tags {
   display: flex;
   align-items: flex-start;
@@ -118,3 +117,11 @@
   filter: brightness(100%);
 }
 
+.blog hr {
+  display: block;
+  width: 100%;
+  height: 0;
+  margin: 2rem 0;
+  border: 0;
+  border-top: 1px solid #686868;
+}
