edit profile intro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,13 +7,13 @@ import Header from '../components/Header.astro';
 import { ProjectsData } from "../data/projects";
 ---
 
-<MainLayout title="Tonie Victor" description="">
+<MainLayout title="Tonie Victor" description="Backend infrastructure, databases, distributed systems">
   <Nav />
 	<Header />
   <main>
     <section class="intro_section">
 			<p>
-				Hi! My name is Tonie Victor, I'm a software developer with a primary interest in low level software, networking, backend infrastructure and distributed systems.
+        Hi! My name is Tonie Victor — a software engineer with a primary interest in backend infrastructure, databases and distributed systems.
 			</p>
 			<p>
         I'm currently open to full-time, part-time, or contract opportunities, especially in Golang and backend-heavy projects. Feel free to reach out at <a href="mailto:victor@tonie.me" target="_blank">victor@tonie.me</a> or book a chat using the calendar link at the bottom-right corner of this page.
