change signature color

--- a/src/components/Back.astro
+++ b/src/components/Back.astro
@@ -11,7 +11,7 @@ const { text, url } = Astro.props;
 <style>
 	.back {
 		opacity: 0.8;
-		color: #fca311;
+		color: var(--highlight-color);
 		transition: ease 300ms all;
 	}
 
