--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -15,19 +15,14 @@ footer button {
   border: none;
   font-weight: 400;
   font-size: .9rem;
-  padding: 7px 12px;
-  border-radius: 2rem;
-  box-shadow: 0 1 5px rgba(0, 0, 0, 0.5);
   cursor: pointer;
   width: max-content;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-end;
   gap: .3rem;
-  color: #2C2C2C;
-  background-color: #fca311;
-
-	padding: .4rem 0.95rem;
+  color: white;
+  background-color: transparent;
+  text-decoration: underline;
 }
 
 footer button:hover {
