fix color in mobile

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -16,7 +16,13 @@ header {
   cursor: pointer;
   font-size: 0.9rem;
   color: var(--highlight-color);
+  font-weight: 800;
+}
+
+.menu__btn span {
+  color: white;
   font-weight: 600;
+  opacity: .9;
 }
 
 .nav__menu {
