--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,42 +1,42 @@
 :root {
-  --padding-x-lg: 0rem;
-  --highlight-color: #ff6719;
+	--padding-x-lg: 0rem;
+	--highlight-color: #ff6719;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
 }
 
 html {
-  scroll-behavior: smooth;
+	scroll-behavior: smooth;
 }
 
 main {
-  width: 100%;
+	width: 100%;
 }
 
 body {
-  overflow-x: hidden;
-  color: #f8f9fa;
-  font-family: "Arvo", serif;
-  font-weight: 400;
-  font-style: normal;
-  line-height: 29px;
-  font-size: 17px;
-  background-color: #1a1a1a;
-  word-wrap: break-word;
-  overflow-wrap: break-word;
-  transition-property: all;
-  transition-timing-function: cubic-bezier(.4, 0, .2, 1);
-  transition-duration: .15s;
-  max-width: 48rem;
-  flex-direction: column;
-  margin: auto;
-  display: flex;
+	overflow-x: clip;
+	color: #f8f9fa;
+	font-family: "Arvo", serif;
+	font-weight: 400;
+	font-style: normal;
+	font-size: 16px;
+	line-height: 1.65;
+	background-color: #1a1a1a;
+	word-wrap: break-word;
+	overflow-wrap: break-word;
+	transition-property: all;
+	transition-timing-function: cubic-bezier(.4, 0, .2, 1);
+	transition-duration: .15s;
+	max-width: 48rem;
+	flex-direction: column;
+	margin: auto;
+	display: flex;
 }
 
 h1,
@@ -45,83 +45,167 @@ h3,
 h4,
 h5,
 h6 {
-  line-height: 1.2;
+	line-height: 1.2;
 }
 
 a {
-  text-decoration: none;
-  color: inherit;
+	text-decoration: none;
+	color: inherit;
 }
 
 a:hover {
-  filter: brightness(80%);
+	filter: brightness(80%);
 }
 
 p {
-  line-height: 1.75rem;
+	line-height: 1.75rem;
 }
 
 p>a {
-  border-bottom: 1px solid;
-  text-decoration: none;
+	border-bottom: 1px solid;
+	text-decoration: none;
 }
 
 section {
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
+	display: flex;
+	flex-direction: column;
+	gap: 1.5rem;
 }
 
 .section__title {
-  font-size: 2.2rem;
-  gap: 0.3rem;
-  font-weight: 800;
-  display: flex;
-  align-items: center;
+	font-size: 2.2rem;
+	gap: 0.3rem;
+	font-weight: 800;
+	display: flex;
+	align-items: center;
 }
 
 .section__title::before {
-  content: "";
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 2.5rem;
-  width: 0.2rem;
-  background-color: var(--highlight-color);
+	content: "";
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 2.5rem;
+	width: 0.2rem;
+	background-color: var(--highlight-color);
 }
 
 @media screen and (max-width: 1024px) {
-  :root {
-    --padding-x-lg: 8rem;
-  }
+	:root {
+		--padding-x-lg: 8rem;
+	}
 }
 
 @media screen and (max-width: 960px) {
-  :root {
-    --padding-x-lg: 4rem;
-  }
+	:root {
+		--padding-x-lg: 4rem;
+	}
 }
 
 @media screen and (max-width: 480px) {
-  body {
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
 
-  p {
-    line-height: 1.5rem;
-  }
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		line-height: 1.2;
+	}
 
-  :root {
-    --padding-x-lg: 1rem;
-  }
+	a {
+		text-decoration: none;
+		color: inherit;
+	}
 
-  .section__title {
-    font-size: 1.8rem;
-  }
+	a:hover {
+		filter: brightness(80%);
+	}
 
-  .section__title::before {
-    height: 2rem;
-    width: 0.2rem;
-  }
+	p {
+		line-height: 1.75rem;
+	}
+
+	p>a {
+		border-bottom: 1px solid;
+		text-decoration: none;
+	}
+
+	section {
+		display: flex;
+		flex-direction: column;
+		gap: 1.5rem;
+	}
+
+	.section__title {
+		font-size: 2.2rem;
+		gap: 0.3rem;
+		font-weight: 800;
+		display: flex;
+		align-items: center;
+	}
+
+	.section__title::before {
+		content: "";
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		height: 2.5rem;
+		width: 0.2rem;
+		background-color: var(--highlight-color);
+	}
+
+	@media screen and (max-width: 1024px) {
+		:root {
+			--padding-x-lg: 8rem;
+		}
+	}
+
+	@media screen and (max-width: 960px) {
+		:root {
+			--padding-x-lg: 4rem;
+		}
+	}
+
+	@media screen and (max-width: 480px) {
+		body {
+			font-size: 16px;
+			line-height: 1.5rem;
+		}
+
+		p {
+			line-height: 1.5rem;
+		}
+
+		:root {
+			--padding-x-lg: 1rem;
+		}
+
+		.section__title {
+			font-size: 1.8rem;
+		}
+
+		.section__title::before {
+			height: 2rem;
+			width: 0.2rem;
+		}
+	}
+}
+
+p {
+	line-height: 1.5rem;
+}
+
+:root {
+	--padding-x-lg: 1rem;
+}
+
+.section__title {
+	font-size: 1.8rem;
+}
+
+.section__title::before {
+	height: 2rem;
+	width: 0.2rem;
+}
 }
