--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import "./footer.css"
 import { Icon } from "astro-icon/components";
 ---
 
-<footer>
+<footer class="footer">
   <span>&#169; Tonie.</span>
 
   <button data-cal-link="tonievictor/work-with-me" data-cal-namespace="work-with-me"
