--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,9 +3,8 @@ import "./footer.css"
 import { Icon } from "astro-icon/components";
 ---
 
-<footer class="footer">
+<footer>
   <span>&#169; Tonie.</span>
-
   <button data-cal-link="tonievictor/work-with-me" data-cal-namespace="work-with-me"
     data-cal-config='{"layout":"month_view"}'>
     <Icon name="mdi:calendar" class="social_link"/><span>book a chat</span>
