--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,4 +1,4 @@
-.footer {
+footer {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -6,12 +6,12 @@
 	font-size: 0.9rem;
 }
 
-.footer span {
+footer span {
 	opacity: 0.65;
 	line-height: 150%;
 }
 
-.footer button {
+footer button {
 	border: none;
 	font-weight: 400;
 	font-size: .9rem;
@@ -25,11 +25,11 @@
 	text-decoration: underline;
 }
 
-.footer button:hover {
+footer button:hover {
 	filter: brightness(90%);
 }
 
-.footer button span {
+footer button span {
 	font-family: "Arvo", serif;
 	opacity: 1;
 }
