--- a/src/layout/seo-head.astro
+++ b/src/layout/seo-head.astro
@@ -7,17 +7,14 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 <!-- Primary -->
 <meta name="generator" content={Astro.generator} />
 <meta name="title" content={title} />
-<meta name="author" content="Tonie Victor">
+<meta name="author" content="Tonie Victor" />
 <meta name="description" content={description} />
 <meta name="keywords" content={keywords} />
 <meta charset="utf-8" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="Content-Language" content="en" />
-<link rel="icon" type="image/svg+xml" href="/favicon.ico">
+<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<meta name="viewport" content="width=device-width" />
 <meta name="generator" content={Astro.generator} />
 <meta name="google" content="notranslate" />
 <link rel="canonical" href={canonicalURL} />
