--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,40 +3,65 @@ import { Icon } from "astro-icon/components";
 import MainLayout from "../layout/main-layout.astro";
 import "../styles/index.css";
 import Nav from "../components/Nav.astro";
-import Header from '../components/Header.astro';
+import Header from "../components/Header.astro";
 import { ProjectsData } from "../data/projects";
 ---
 
-<MainLayout title="Tonie Victor" description="Backend infrastructure, databases, distributed systems">
-  <Nav />
+<MainLayout
+	title="Tonie Victor"
+	description="Backend infrastructure, databases, distributed systems"
+>
+	<Nav />
 	<Header />
-  <main>
-    <section class="intro_section">
+	<main>
+		<section class="intro_section">
 			<p>
-        Hi! My name is Tonie Victor — a software engineer with a primary interest in backend infrastructure, databases and distributed systems.
+				Hi! My name is Tonie Victor — a software engineer with a primary
+				interest in backend infrastructure, databases and distributed
+				systems.
 			</p>
 			<p>
-        I'm currently open to full-time, part-time, or contract opportunities, especially in Golang and backend-heavy projects. Feel free to reach out at <a href="mailto:victor@tonie.me" target="_blank">victor@tonie.me</a> or book a chat using the calendar link at the bottom-right corner of this page.
+				I'm currently open to full-time, part-time, or contract
+				opportunities, especially in Golang and backend-heavy projects.
+				Feel free to reach out at <a
+					href="mailto:victor@tonie.me"
+					target="_blank">victor@tonie.me</a
+				> or book a chat using the calendar link at the bottom-right corner
+				of this page.
 			</p>
 			<p>
-				Outside tinkering with code, I read books, play video games, listen to music and I'm fairly adept at playing football.
+				Outside tinkering with code, I read books, play video games,
+				listen to music and I'm fairly adept at playing football.
 			</p>
-    </section>
+		</section>
 
-    <section id="projects" class="projects">
-      <h2 class="section__title">Projects</h2>
-      <div class="project_container">
-				{ProjectsData.map((project) => (
-					<div class="project" >
-							<a target="_blank" href={project.link} class="project_title">{project.title} <Icon name="mdi:arrow-top-right-thin" class="project_arrow"/></a>
+		<section id="projects" class="projects">
+			<h2 class="section__title">Projects</h2>
+			<div class="project_container">
+				{
+					ProjectsData.map((project) => (
+						<div class="project">
+							<a
+								target="_blank"
+								href={project.link}
+								class="project_title"
+							>
+								{project.title}{" "}
+								<Icon
+									name="mdi:arrow-top-right-thin"
+									class="project_arrow"
+								/>
+							</a>
 							<p>{project.overview}</p>
 							<div class="project_tags">
-								{project.tags.map((tag) => <span>{tag}</span>)}
+								{project.tags.map((tag) => (
+									<span>{tag}</span>
+								))}
 							</div>
-					</div>
-					))}
-	  </div>
-
-    </section>
-  </main>
+						</div>
+					))
+				}
+			</div>
+		</section>
+	</main>
 </MainLayout>
