--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,8 @@ import { Icon } from "astro-icon/components";
     data-cal-config='{"layout":"month_view"}'>
     <Icon name="mdi:calendar" class="social_link"/><span>book a chat</span>
   </button>
-    <script type="text/javascript">
+
+    <script type="text/javascript" is:inline>
       (function (C, A, L) {let p = function (a, ar) {a.q.push(ar);}; let d = C.document; C.Cal = C.Cal || function () {let cal = C.Cal; let ar = arguments; if (!cal.loaded) {cal.ns = {}; cal.q = cal.q || []; d.head.appendChild(d.createElement("script")).src = A; cal.loaded = true;} if (ar[0] === L) {const api = function () {p(api, arguments);}; const namespace = ar[1]; api.q = api.q || []; if (typeof namespace === "string") {cal.ns[namespace] = cal.ns[namespace] || api; p(cal.ns[namespace], ar); p(cal, ["initNamespace", namespace]);} else p(cal, ar); return;} p(cal, ar);};})(window, "https://app.cal.com/embed/embed.js", "init");
       Cal("init", "work-with-me", {origin: "https://app.cal.com"});
       Cal.ns["work-with-me"]("ui", {"hideEventTypeDetails": false, "layout": "month_view"});
