--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -7,7 +7,7 @@ nav {
 	position: sticky;
 	top: 0;
 	max-width: 48rem;
-	background-color: #1a1a1a;
+	background-color: #212121;
 	border-bottom: 1px solid #e5e5e520;
 	z-index: 1;
 }
