--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,7 +1,12 @@
 ---
 import { type CollectionEntry, getCollection } from 'astro:content';
-import BlogLayout from "../../layout/blog-layout.astro";
 import "../../styles/blog.css"
+import FormattedDate from '../../components/FormattedDate.astro';
+import Nav from '../../components/Nav.astro';
+import "../../styles/global.css";
+import Footer from "../../components/Footer.astro";
+import SeoHead from "../../layout/seo-head.astro";
+import Back from "../../components/Back.astro";
 
 export async function getStaticPaths() {
     const posts = (await getCollection('articles'))
@@ -16,6 +21,37 @@ const post = Astro.props;
 const { Content } = await post.render();
 ---
 
-<BlogLayout {...post.data}>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta name="author" content="Tonie Victor" />
+		<meta name="robots" content="index, follow" />
+		<meta name="googlebot" content="index, follow" />
+		<meta name="google" content="notranslate" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+		<SeoHead title={post.data.title} description={post.data.description} image={post.data.heroImage} keywords={post.data.keywords}/>
+	</head>
+
+	<body>
+        <Nav/>
+        <main class="main">
+						<Back text="Back to blog" url="/blog"></Back>
+            <section>
+                <div class="top">
+					<h1>{post.data.title}</h1>
+                    <FormattedDate date={post.data.pubDate}/>
+									</div>
+                </div>
+            </section>
     <div class="blog"><Content/></div>
-</BlogLayout>
+            <div class="post_tags">
+				{post.data.tags.map((t) => 
+              <a href={`/blog/tags/${t.replace(" ", "-")}`}>{t}</a>
+              )}
+            </div>
+        </main>
+				<Footer />
+	</body>
+</html>
