--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,31 +1,43 @@
 ---
 import MainLayout from "../../layout/main-layout.astro";
-import { getCollection } from 'astro:content';
+import { getCollection } from "astro:content";
 import FormattedDate from "../../components/FormattedDate.astro";
 import "../../styles/index.css";
 import "../../styles/blog.css";
 import Nav from "../../components/Nav.astro";
-import Header from '../../components/Header.astro';
+import Header from "../../components/Header.astro";
 
-
-const posts = (await getCollection('articles', ({ data }) => data.draft !== true ))?.sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
+const posts = (
+	await getCollection("articles", ({ data }) => data.draft !== true)
+)?.sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
 ---
-<MainLayout title="Blog | Tonie Victor" description="Backend infrastructure, databases, distributed systems">
+
+<MainLayout
+	title="Blog | Tonie Victor"
+	description="Backend infrastructure, databases, distributed systems"
+>
 	<Nav />
 	<Header />
 	<main>
 		<section>
 			<h2 class="section__title">Blog</h2>
 			<ul class="posts_container">
-				{posts.map((post) => (
-					<>
-						<li class="post">
-							<!--<p>{post.data.description}</p>-->
-							<FormattedDate date={post.data.pubDate} class="time"/>
-          <a href={`/blog/${post.slug}/`} class="title">{post.data.title}</a>
-						</li>
-					</>
-				))}
+				{
+					posts.map((post) => (
+						<>
+							<li class="post">
+								<a href={`/blog/${post.slug}/`} class="title">
+									{post.data.title}
+								</a>
+								<FormattedDate
+									date={post.data.pubDate}
+									class="time"
+								/>
+								<p>{post.data.description}</p>
+							</li>
+						</>
+					))
+				}
 			</ul>
 		</section>
 	</main>
