--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -1,23 +1,160 @@
+/* Index Page */
 .posts_container {
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
+}
+
+.post {
+	display: flex;
+	flex-direction: column;
+	gap: .5rem;
+	border-bottom: 1px solid #e5e5e520;
+	padding-bottom: 1rem;
+}
+
+.post .title {
+	text-decoration: underline;
+	font-weight: 500;
+	font-size: 1.2rem;
+}
+
+.post p {
+	opacity: 0.9
+}
+
+
+/* Blog Post */
+.main {
+	padding: 2rem var(--padding-x-lg);
+	display: flex;
+	flex-direction: column;
+	line-height: 29px;
+	gap: 2rem;
+}
+
+.top {
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
 }
 
-.post {
+.blog {
 	display: flex;
-	flex-direction: column-reverse;
+	flex-direction: column;
+	/* gap: 2rem; */
 }
 
-.post .title {
+.blog>* {
+	margin-bottom: 2rem;
+}
+
+.blog h1 {
+	font-size: 2.25rem;
+}
+
+.blog h2 {
+	font-size: 1.875rem;
+}
+
+.blog h3 {
+	font-size: 1.5rem;
+}
+
+
+.blog pre {
+	padding: 1rem;
+	border-radius: 0.5rem;
+}
+
+.blog code {
+	all: unset;
+	background-color: #2d2d2d;
+	border-radius: .2rem;
+	padding: 0.2rem
+}
+
+.blog pre code {
+	all: unset;
+}
+
+.blog img {
+	border-radius: 0.5rem;
+	margin-top: 1rem;
+	object-fit: contain;
+	width: 100%;
+}
+
+.blog h2 {
+	padding: 1rem 0;
+}
+
+.blog h3 {
+	padding: 1rem 0;
+}
+
+.blog ul,
+.blog ol {
+	list-style-position: outside;
+	margin: 0 0 1rem 1.25rem;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	padding-left: .5rem;
+}
+
+.contains-task-list {
+	list-style: none;
+}
+
+.blog blockquote {
+	font-style: italic;
+	display: flex;
+	border-left: 4px solid var(--highlight-color);
+	padding: 0 0.5rem;
+	flex-direction: column;
+	opacity: 0.9;
+}
+
+.post_tags {
+	display: flex;
+	align-items: flex-start;
+	gap: 0.5rem;
+	flex-wrap: wrap;
+	font-size: 0.8rem;
+}
+
+.post_tags a {
+	background-color: #1a1a1a;
+	font-weight: 400;
+	filter: brightness(130%);
+	padding: 0 0.95rem;
+	opacity: .6;
+	color: white;
+	border-radius: 2rem;
+	box-shadow: 0 1 2px rgba(0, 0, 0, 0.5);
+	display: flex;
+	cursor: pointer;
+	width: max-content;
+	align-items: center;
+	justify-content: center;
+}
+
+.post_tags a:hover {
+	filter: brightness(100%);
+}
+
+.blog hr {
+	display: block;
+	width: 100%;
+	height: 0;
+	margin: 2rem 0;
+	border: 0;
+	border-top: 1px solid #686868;
+}
+
+.blog sup {
 	text-decoration: underline;
-	padding-bottom: 1rem;
 }
 
-@media screen and (min-width: 800px) {
-	.post {
-		display: grid;
-		grid-template-columns: minmax(7rem, auto) 1fr;
-		gap: 1rem;
-	}
-}
+* Blog Post */
