--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,7 +55,7 @@ import { ProjectsData } from "../data/projects";
 							<p>{project.overview}</p>
 							<div class="project_tags">
 								{project.tags.map((tag) => (
-									<span>{tag}</span>
+									<span>#{tag}</span>
 								))}
 							</div>
 						</div>
