--- a/src/pages/blog/tags/[tag].astro
+++ b/src/pages/blog/tags/[tag].astro
@@ -1,52 +1,63 @@
 ---
 import MainLayout from "../../../layout/main-layout.astro";
-import { getCollection } from 'astro:content';
+import { getCollection } from "astro:content";
 import FormattedDate from "../../../components/FormattedDate.astro";
 import "../../../styles/index.css";
 import "../../../styles/blog.css";
 import Nav from "../../../components/Nav.astro";
-import Header from '../../../components/Header.astro';
-
+import Header from "../../../components/Header.astro";
 
 export async function getStaticPaths() {
-	const posts = (await getCollection('articles'));
-	const tags = [...new Set(posts.map((p) => p.data.tags).flat())]
-		.filter((p) => p.length > 0);
+	const posts = await getCollection("articles");
+	const tags = [...new Set(posts.map((p) => p.data.tags).flat())].filter(
+		(p) => p.length > 0,
+	);
 	return tags.map((t) => ({
-		params: {tag: t.replace(" ", "-")}
-	}))
+		params: { tag: t.replace(" ", "-") },
+	}));
 }
 
 const { tag } = Astro.params;
-const posts = (await getCollection('articles', ({ data }) => data.draft !== true ))
+const posts = (
+	await getCollection("articles", ({ data }) => data.draft !== true)
+)
 	?.filter((p) => p.data.tags.includes(tag.replace("-", " ")))
 	.sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
 ---
+
 <MainLayout title=`Blog | Tag: ${tag}` description="Tonie - Software Developer">
 	<Nav />
 	<Header />
 	<main>
 		<section>
-			<span style={{
-				"font-style": "italic",
-				"font-size": "1rem",
-				"opacity": "0.6"
-			}}>
+			<span
+				style={{
+					"font-style": "italic",
+					"font-size": "1rem",
+					opacity: "0.6",
+				}}
+			>
 				{`Showing results for tag: `}<b>{`${tag}`}</b>
 			</span>
 			<h2 class="section__title">Blog</h2>
 			<ul class="posts_container">
-				{posts.map((post) => (
-					<>
-						<li class="post">
-							<!--<p>{post.data.description}</p>-->
-							<FormattedDate date={post.data.pubDate} class="time"/>
-          <a href={`/blog/${post.slug}/`} class="title">{post.data.title}</a>
-						</li>
-					</>
-				))}
+				{
+					posts.map((post) => (
+						<>
+							<li class="post">
+								<a href={`/blog/${post.slug}/`} class="title">
+									{post.data.title}
+								</a>
+								<FormattedDate
+									date={post.data.pubDate}
+									class="time"
+								/>
+								<p>{post.data.description}</p>
+							</li>
+						</>
+					))
+				}
 			</ul>
 		</section>
 	</main>
 </MainLayout>
-
