--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -40,42 +40,62 @@
 	gap: 1rem;
 }
 
+.top h1 {
+	line-height: 1.25;
+}
+
+.top time {
+	font-style: italic;
+}
+
 .blog {
 	display: flex;
 	flex-direction: column;
 }
 
 .blog>* {
-	margin-bottom: 2rem;
+	margin-bottom: 1.5rem;
 }
 
-.blog h1 {
-	font-size: 2.25rem;
+.blog h2,
+.blog h3 {
+	margin-bottom: 0;
 }
+
 
 .blog h2 {
 	font-size: 1.875rem;
+	line-height: 1.3;
 }
 
 .blog h3 {
 	font-size: 1.5rem;
+	line-height: 1.35;
 }
 
 
 .blog pre {
 	padding: 1rem;
 	border-radius: 0.5rem;
+	color: #f8f8f2;
+	overflow-x: auto;
+
 }
 
 .blog code {
-	all: unset;
-	background-color: #2d2d2d;
-	border-radius: .2rem;
-	padding: 0.2rem
+	background-color: #383838;
+	color: #f8f8f2;
+	padding: 0.2rem 0.4rem;
+	border-radius: 0.2rem;
+	font-family: "Courier New", Courier, monospace;
+	font-size: 0.95rem;
 }
 
 .blog pre code {
-	all: unset;
+	background: none;
+	padding: 0;
+	border-radius: 0;
+	color: inherit;
 }
 
 .blog img {
@@ -114,6 +134,7 @@
 	padding: 0 0.5rem;
 	flex-direction: column;
 	opacity: 0.9;
+	font-size: 1rem;
 }
 
 .post_tags {
